# backtest

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
backtest/: backtest.hpp  controller.hpp  strategy.hpp
client/python/: backtest.py  example.py
lib/: candle.hpp  candles.cpp  candles.hpp  datetime.cpp  datetime.hpp  trade.hpp
report/: report.hpp
shared/: config.cpp  config.hpp
testData/: simple_strategy.json
tests/: simpleTests.hpp
